Some design improvements

--- a/about.html
+++ b/about.html
@@ -26,16 +26,14 @@
             <img src="Icons/CatMeooww.jpg" style="width: 80%;">
         </div>
         <div class="col-sm-12 col-md-6">
-
-            <p style="color: #ddeeff;">My name is Cat Meooww, I Started to develop at 13 years old. I Created some
-                cool websites: like Minecraft Lists, Minecraft World Community, Minecraft Utilities. I Created some
-                games too: Jumping Around, Survival Plains (still in development). Some Minecraft Mods: Crafty World.
-                And I want to create a lot of other things in the future!</p>
-            <br>
-            <p style="color: #ddeeff;">You can see that many of my projects are related to Minecraft, this is because it
-                is my favourite game!</p>
-
-            <a href="https://catmeooww.github.io/Crafty-Hub/craftyUsers.html">Also, visit me in Crafty Hub</a>
+            <p>Welcome to my projects page, I am CatMeooww10 and I develop some simple websites and games using
+                JavaScript and HTML, some of this websites can be useful and some games can be fun, try them!</p>
+            <p>Also, I build Minecraft Mods and Maps you can find on the Games section.</p>
+            <br><br>
+            <a href="./catmeoowwProjects.html">Visit Cat's Projects Here</a><br>
+            <a href="https://catmeooww.github.io/CatMeooww-GamingArea/index.html#gameBox">Visit Games Here</a>
+            <br><br>
+            <a href="https://catmeooww.github.io/Crafty-Hub/craftyUsers.html">Visit my forums in my own website: Crafty Hub</a>
         </div>
     </center>
 </body>
