--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -25,73 +25,73 @@
         <div id="showingProjects">
                 <center>
                         <div class="CatProjects" title="WebSpaces">
-                                <img src="./otherSites/HexSpaceBg.png">
+                                <img onclick="redirect(1)" src="./otherSites/HexSpaceBg.png">
                                 <button onclick="about(1)">About</button>
                                 <button onclick="redirect(1)">Access</button>
                                 <p id="abt1">WebSpaces</p>
                         </div>
                         <div class="CatProjects" title="Crafty Hub">
-                                <img src="./otherSites/CraftyForums.png">
+                                <img onclick="redirect(2)" src="./otherSites/CraftyForums.png">
                                 <button onclick="about(2)">About</button>
                                 <button onclick="redirect(2)">Access</button>
                                 <p id="abt2">Crafty Hub</p>
                         </div>
                         <div class="CatProjects" title="Minecraft Listing">
-                                <img src="./otherSites/Minecraft Listing Background.jpg">
+                                <img onclick="redirect(3)" src="./otherSites/Minecraft Listing Background.jpg">
                                 <button onclick="about(3)">About</button>
                                 <button onclick="redirect(3)">Access</button>
                                 <p id="abt3">Minecraft Listing</p>
                         </div>
                         <div class="CatProjects" title="GameCord">
-                                <img src="./otherSites/GameCordBg.png">
+                                <img onclick="redirect(4)" src="./otherSites/GameCordBg.png">
                                 <button onclick="about(4)">About</button>
                                 <button onclick="redirect(4)">Access</button>
                                 <p id="abt4">GameCord</p>
                         </div>
                         <div class="CatProjects" title="Minecraft World Community">
-                                <img src="./otherSites/Minecraft Community Background.jpg">
+                                <img onclick="redirect(5)" src="./otherSites/Minecraft Community Background.jpg">
                                 <button onclick="about(5)">About</button>
                                 <button onclick="redirect(5)">Access</button>
                                 <p id="abt5">Minecraft World Community</p>
                         </div>
                         <div class="CatProjects" title="Minecraft Builders Blog">
-                                <img src="./otherSites/BuildersBlog Background.png">
+                                <img onclick="redirect(6)" src="./otherSites/BuildersBlog Background.png">
                                 <button onclick="about(6)">About</button>
                                 <button onclick="redirect(6)">Access</button>
                                 <p id="abt6">Minecraft Builders Blog</p>
                         </div>
                         <div class="CatProjects" title="Index Dev">
-                                <img src="./otherSites/IndexDevBg.png">
+                                <img onclick="redirect(7)" src="./otherSites/IndexDevBg.png">
                                 <button onclick="about(7)">About</button>
                                 <button onclick="redirect(7)">Access</button>
                                 <p id="abt7">Index Dev</p>
                         </div>
                         <div class="CatProjects" title="Minecraft Utilities">
-                                <img src="./otherSites/MC-Utilities_bg.jpg">
+                                <img onclick="redirect(8)" src="./otherSites/MC-Utilities_bg.jpg">
                                 <button onclick="about(8)">About</button>
                                 <button onclick="redirect(8)">Access</button>
                                 <p id="abt8">Minecraft Utilities</p>
                         </div>
                         <div class="CatProjects" title="Minecraft World News">
-                                <img src="./otherSites/Minecraft World Background.png">
+                                <img onclick="redirect(9)" src="./otherSites/Minecraft World Background.png">
                                 <button onclick="about(9)">About</button>
                                 <button onclick="redirect(9)">Access</button>
                                 <p id="abt9">Minecraft World News</p>
                         </div>
                         <div class="CatProjects" title="Minecraftpédia">
-                                <img src="./otherSites/Minecraftpedia Background.jpg">
+                                <img onclick="redirect(10)" src="./otherSites/Minecraftpedia Background.jpg">
                                 <button onclick="about(10)">About</button>
                                 <button onclick="redirect(10)">Access</button>
                                 <p id="abt10">MinecraftPedia</p>
                         </div>
                         <div class="CatProjects" title="Minecraft Filter">
-                                <img src="./otherSites/Mobs.png">
+                                <img onclick="redirect(11)" src="./otherSites/Mobs.png">
                                 <button onclick="about(11)">About</button>
                                 <button onclick="redirect(11)">Access</button>
                                 <p id="abt11">Minecraft Filter</p>
                         </div>
                         <div class="CatProjects" title="Minecraft AI">
-                                <img src="./otherSites/aicraft_bg.png">
+                                <img onclick="redirect(12)" src="./otherSites/aicraft_bg.png">
                                 <button onclick="about(12)">About</button>
                                 <button onclick="redirect(12)">Access</button>
                                 <p id="abt12">Minecraft with AI</p>
