--- a/catmeoowwProjects.html
+++ b/catmeoowwProjects.html
@@ -17,124 +17,137 @@
                 <span>|</span>
                 <a href="about.html">About CatMeooww10</a>
         </div>
+        <section id="front" title='"The Meownium Building" from The Great Minecraft World (games section)'>
+                <br><br><br><br><br>
+                <div>
+                        <h2 id="cattitle">The CatMeooww10 Projects!</h2>
+                        <hr>
+                </div>
+                <br><br><br><br><br>
+        </section>
         <hr>
-        <div class="titlecontainer">
-                <h1 class="title">CATMEOOWW10 WEB PROJECTS!</h1>
-        </div>
-        <hr>
-        <div id="showingProjects">
-                <center>
-                        <div class="CatProjects" title="WebSpaces">
-                                <img onclick="redirect(1)" src="./otherSites/HexSpaceBg.png">
-                                <button onclick="about(1)">About</button>
-                                <button onclick="redirect(1)">Access</button>
-                                <p id="abt1">WebSpaces</p>
-                        </div>
-                        <div class="CatProjects" title="Crafty Hub">
-                                <img onclick="redirect(2)" src="./otherSites/CraftyForums.png">
-                                <button onclick="about(2)">About</button>
-                                <button onclick="redirect(2)">Access</button>
-                                <p id="abt2">Crafty Hub</p>
-                        </div>
-                        <div class="CatProjects" title="Minecraft Listing">
-                                <img onclick="redirect(3)" src="./otherSites/Minecraft Listing Background.jpg">
-                                <button onclick="about(3)">About</button>
-                                <button onclick="redirect(3)">Access</button>
-                                <p id="abt3">Minecraft Listing</p>
-                        </div>
-                        <div class="CatProjects" title="GameCord">
-                                <img onclick="redirect(4)" src="./otherSites/GameCordBg.png">
-                                <button onclick="about(4)">About</button>
-                                <button onclick="redirect(4)">Access</button>
-                                <p id="abt4">GameCord</p>
-                        </div>
-                        <div class="CatProjects" title="Minecraft World Community">
-                                <img onclick="redirect(5)" src="./otherSites/Minecraft Community Background.jpg">
-                                <button onclick="about(5)">About</button>
-                                <button onclick="redirect(5)">Access</button>
-                                <p id="abt5">Minecraft World Community</p>
-                        </div>
-                        <div class="CatProjects" title="Minecraft Builders Blog">
-                                <img onclick="redirect(6)" src="./otherSites/BuildersBlog Background.png">
-                                <button onclick="about(6)">About</button>
-                                <button onclick="redirect(6)">Access</button>
-                                <p id="abt6">Minecraft Builders Blog</p>
-                        </div>
-                        <div class="CatProjects" title="Index Dev">
-                                <img onclick="redirect(7)" src="./otherSites/IndexDevBg.png">
-                                <button onclick="about(7)">About</button>
-                                <button onclick="redirect(7)">Access</button>
-                                <p id="abt7">Index Dev</p>
-                        </div>
-                        <div class="CatProjects" title="Minecraft Utilities">
-                                <img onclick="redirect(8)" src="./otherSites/MC-Utilities_bg.jpg">
-                                <button onclick="about(8)">About</button>
-                                <button onclick="redirect(8)">Access</button>
-                                <p id="abt8">Minecraft Utilities</p>
-                        </div>
-                        <div class="CatProjects" title="Minecraft World News">
-                                <img onclick="redirect(9)" src="./otherSites/Minecraft World Background.png">
-                                <button onclick="about(9)">About</button>
-                                <button onclick="redirect(9)">Access</button>
-                                <p id="abt9">Minecraft World News</p>
-                        </div>
-                        <div class="CatProjects" title="Minecraftpédia">
-                                <img onclick="redirect(10)" src="./otherSites/Minecraftpedia Background.jpg">
-                                <button onclick="about(10)">About</button>
-                                <button onclick="redirect(10)">Access</button>
-                                <p id="abt10">MinecraftPedia</p>
-                        </div>
-                        <div class="CatProjects" title="Minecraft Filter">
-                                <img onclick="redirect(11)" src="./otherSites/Mobs.png">
-                                <button onclick="about(11)">About</button>
-                                <button onclick="redirect(11)">Access</button>
-                                <p id="abt11">Minecraft Filter</p>
-                        </div>
-                        <div class="CatProjects" title="Minecraft AI">
-                                <img onclick="redirect(12)" src="./otherSites/aicraft_bg.png">
-                                <button onclick="about(12)">About</button>
-                                <button onclick="redirect(12)">Access</button>
-                                <p id="abt12">Minecraft with AI</p>
-                        </div>
-                        <div class="CatProjects" title="more">
-                                <label style="color: white;text-shadow: 2px 2px 2px green;">More Stuff Coming!<br>Access games page for more</label>
-                        </div>
-                </center>
-        </div>
-        <br><br>
-        <div class="titlecontainer">
-                <h1 class="title">CATMEOOWW10 GAMES</h1>
-        </div>
-        <hr>
-        <div title="Click here to view Games!"
-                style="border: inset 2px lime;text-align: center;width: 90%;margin:5%;background-color: black;padding: 10px;">
-                <a id="gamesAnchor" href="https://catmeooww.github.io/CatMeooww-GamingArea/">View CatMeooww Games
-                        Page!</a>
-                <button onclick="showGames()" id="showGames"
-                        style="float: right;background-color: black;color: lime;">+</button>
-        </div>
-        <div id="showingGames" style="text-align: center;visibility: hidden;">
+        <section id="main">
+                <div class="titlecontainer">
+                        <h1 class="title">CATMEOOWW10 WEB SITES!</h1>
+                </div>
+                <hr>
+                <div id="showingProjects">
+                        <center>
+                                <div id="p-webspace" class="CatProjects" title="WebSpaces">
+                                        <img onclick="redirect(1)" src="./otherSites/HexSpaceBg.png">
+                                        <button onclick="about(1)">About</button>
+                                        <button onclick="redirect(1)">Access</button>
+                                        <p id="abt1">WebSpaces</p>
+                                </div>
+                                <div id="p-craftyhub" class="CatProjects" title="Crafty Hub">
+                                        <img onclick="redirect(2)" src="./otherSites/CraftyForums.png">
+                                        <button onclick="about(2)">About</button>
+                                        <button onclick="redirect(2)">Access</button>
+                                        <p id="abt2">Crafty Hub</p>
+                                </div>
+                                <div id="p-mclist" class="CatProjects" title="Minecraft Listing">
+                                        <img onclick="redirect(3)" src="./otherSites/Minecraft Listing Background.jpg">
+                                        <button onclick="about(3)">About</button>
+                                        <button onclick="redirect(3)">Access</button>
+                                        <p id="abt3">Minecraft Listing</p>
+                                </div>
+                                <div id="p-gamecord" class="CatProjects" title="GameCord">
+                                        <img onclick="redirect(4)" src="./otherSites/GameCordBg.png">
+                                        <button onclick="about(4)">About</button>
+                                        <button onclick="redirect(4)">Access</button>
+                                        <p id="abt4">GameCord</p>
+                                </div>
+                                <div id="p-mccommunity" class="CatProjects" title="Minecraft World Community">
+                                        <img onclick="redirect(5)"
+                                                src="./otherSites/Minecraft Community Background.jpg">
+                                        <button onclick="about(5)">About</button>
+                                        <button onclick="redirect(5)">Access</button>
+                                        <p id="abt5">Minecraft World Community</p>
+                                </div>
+                                <div id="p-mcbuilders" class="CatProjects" title="Minecraft Builders Blog">
+                                        <img onclick="redirect(6)" src="./otherSites/BuildersBlog Background.png">
+                                        <button onclick="about(6)">About</button>
+                                        <button onclick="redirect(6)">Access</button>
+                                        <p id="abt6">Minecraft Builders Blog</p>
+                                </div>
+                                <div id="p-indexdev" class="CatProjects" title="Index Dev">
+                                        <img onclick="redirect(7)" src="./otherSites/IndexDevBg.png">
+                                        <button onclick="about(7)">About</button>
+                                        <button onclick="redirect(7)">Access</button>
+                                        <p id="abt7">Index Dev</p>
+                                </div>
+                                <div id="p-mcutilities" class="CatProjects" title="Minecraft Utilities">
+                                        <img onclick="redirect(8)" src="./otherSites/MC-Utilities_bg.jpg">
+                                        <button onclick="about(8)">About</button>
+                                        <button onclick="redirect(8)">Access</button>
+                                        <p id="abt8">Minecraft Utilities</p>
+                                </div>
+                                <div id="p-mcworldnews" class="CatProjects" title="Minecraft World News">
+                                        <img onclick="redirect(9)" src="./otherSites/Minecraft World Background.png">
+                                        <button onclick="about(9)">About</button>
+                                        <button onclick="redirect(9)">Access</button>
+                                        <p id="abt9">Minecraft World News</p>
+                                </div>
+                                <div id="p-mcpedia" class="CatProjects" title="Minecraftpédia">
+                                        <img onclick="redirect(10)" src="./otherSites/Minecraftpedia Background.jpg">
+                                        <button onclick="about(10)">About</button>
+                                        <button onclick="redirect(10)">Access</button>
+                                        <p id="abt10">MinecraftPedia</p>
+                                </div>
+                                <div id="p-mcfilter" class="CatProjects" title="Minecraft Filter">
+                                        <img onclick="redirect(11)" src="./otherSites/Mobs.png">
+                                        <button onclick="about(11)">About</button>
+                                        <button onclick="redirect(11)">Access</button>
+                                        <p id="abt11">Minecraft Filter</p>
+                                </div>
+                                <div id="p-mcia" class="CatProjects" title="Minecraft AI">
+                                        <img onclick="redirect(12)" src="./otherSites/aicraft_bg.png">
+                                        <button onclick="about(12)">About</button>
+                                        <button onclick="redirect(12)">Access</button>
+                                        <p id="abt12">Minecraft with AI</p>
+                                </div>
+                                <div id="p-more" class="CatProjects" title="more">
+                                        <label style="color: white;text-shadow: 2px 2px 2px green;">More Stuff
+                                                Coming!<br>Access games page for more</label>
+                                </div>
+                        </center>
+                </div>
+                <br><br>
+                <div class="titlecontainer">
+                        <h1 class="title">CATMEOOWW10 GAMES</h1>
+                </div>
+                <hr>
+                <div title="Click here to view Games!"
+                        style="border: inset 2px lime;text-align: center;width: 90%;margin:5%;background-color: black;padding: 10px;">
+                        <a id="gamesAnchor" href="https://catmeooww.github.io/CatMeooww-GamingArea/">View CatMeooww
+                                Games
+                                Page!</a>
+                        <button onclick="showGames()" id="showGames"
+                                style="float: right;background-color: black;color: lime;">+</button>
+                </div>
+                <div id="showingGames" style="text-align: center;visibility: hidden;">
 
-        </div>
-        <br><br>
-        <div class="titlecontainer">
-                <h1 class="title">CATMEOOWW10 STORIES</h1>
-        </div>
-        <hr>
-        <div title="Click here to view Stories!"
-                style="border: inset 2px blue;text-align: center;width: 90%;margin:5%;background-color: black;padding: 10px;">
-                <a id="storiesAnchor" href="https://catmeooww.github.io/CatMeooww-Storytelling/">View CatMeooww
-                        Storytelling Page!</a>
-                <button onclick="showStories()" id="showStories"
-                        style="float: right;background-color: black;color: blue;">+</button>
-        </div>
-        <div id="showingStories" style="text-align: center;visibility: hidden;"></div>
-        <hr>
-        <p id="insidenews">Latest News: Paper Survival Game disponible in #Games</p>
-        <b id="catlabel" style="float: right;" onmouseenter="catlabelcol()">@CatMeooww10</b>
+                </div>
+                <br><br>
+                <div class="titlecontainer">
+                        <h1 class="title">CATMEOOWW10 STORIES</h1>
+                </div>
+                <hr>
+                <div title="Click here to view Stories!"
+                        style="border: inset 2px blue;text-align: center;width: 90%;margin:5%;background-color: black;padding: 10px;">
+                        <a id="storiesAnchor" href="https://catmeooww.github.io/CatMeooww-Storytelling/">View CatMeooww
+                                Storytelling Page!</a>
+                        <button onclick="showStories()" id="showStories"
+                                style="float: right;background-color: black;color: blue;">+</button>
+                </div>
+                <div id="showingStories" style="text-align: center;visibility: hidden;"></div>
+                <hr>
+                <p id="insidenews">Latest News: Paper Survival Game disponible in #Games</p>
+                <b id="catlabel" style="float: right;" onmouseenter="catlabelcol()">@CatMeooww10</b>
+        </section>
         <script>
-                function redirect(id){
-                        switch (id){
+                function redirect(id) {
+                        switch (id) {
                                 case 1:
                                         location = "https://catmeooww.github.io/WebSpaces";
                                         break;
@@ -176,8 +189,8 @@
                         }
                 }
 
-                function about(id){
-                        document.getElementById("abt"+id).style.visibility = "visible";
+                function about(id) {
+                        document.getElementById("abt" + id).style.visibility = "visible";
                 }
 
                 function catLabelCol() {
@@ -185,6 +198,7 @@
                         g = Math.floor(Math.random() * 230) + 25;
                         b = Math.floor(Math.random() * 230) + 25;
                         document.getElementById("catlabel").style.color = "rgb(" + r + "," + g + "," + b + ")";
+                        document.getElementById("cattitle").style.color = "rgb(" + r + "," + g + "," + b + ")";
                 }
 
                 function showGames() {
